Fixed enable-cairomm and enable-gtkmm optionsin configure.ac and src/Makefile,am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,11 @@
 INCLUDES        = -I$(top_builddir) -I$(top_srcdir)
 
 noinst_HEADERS  = console.h data.h display.h nc_file.h
-bin_PROGRAMS    = twiin twiin-cmd
+bin_PROGRAMS    = twiin-cmd
+
+if ENABLE_GTKMM
+   bin_PROGRAMS += twiin
+endif
 
 #twiin_LDADD    	= $(top_builddir)/twiin/libtwiin.la
 twiin_SOURCES		= console.cc data.cc display.cc nc_file.cc
