Fixed bug added cross_section_cmd

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 AM_CPPFLAGS        = -I$(top_builddir) -I$(top_srcdir)
 
 noinst_HEADERS  = console.h cross_section.h data.h display.h nc_file.h
-bin_PROGRAMS    = twiin-cmd
+bin_PROGRAMS    = twiin-cmd twiin-cc-cmd
 
 if ENABLE_GTKMM
    bin_PROGRAMS += twiin twiin-cc
@@ -13,4 +13,6 @@ twiin_SOURCES		= console.cc data.cc display.cc nc_file.cc
 twiin_cc_SOURCES	= cross_section.cc data.cc display.cc nc_file.cc
 #twiin_cmd_LDADD	= $(top_builddir)/twiin/libtwiin.la
 twiin_cmd_SOURCES	= main.cc data.cc display.cc nc_file.cc
+#twiin_cc_cmd_LDADD	= $(top_builddir)/twiin/libtwiin.la
+twiin_cc_cmd_SOURCES	= cross_section_cmd.cc data.cc display.cc nc_file.cc
 
