Included Cross Section to console    and other various additions

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,12 +5,13 @@ noinst_HEADERS  = console.h cross_section.h data.h display.h enhancement.h \
 bin_PROGRAMS    = twiin-cmd twiin-cc-cmd
 
 if ENABLE_GTKMM
-   bin_PROGRAMS += twiin twiin-cc
+#   bin_PROGRAMS += twiin twiin-cc
+   bin_PROGRAMS += twiin
 endif
 
 #twiin_LDADD    	= $(top_builddir)/twiin/libtwiin.la
-twiin_SOURCES		= console.cc data.cc display.cc enhancement.cc \
-			  hrit.cc nc_file.cc
+twiin_SOURCES		= console.cc cross_section.cc data.cc display.cc \
+			  enhancement.cc hrit.cc nc_file.cc
 #twiin_cc_LDADD    	= $(top_builddir)/twiin/libtwiin.la
 twiin_cc_SOURCES	= cross_section.cc data.cc display.cc nc_file.cc
 #twiin_cmd_LDADD	= $(top_builddir)/twiin/libtwiin.la
