Various additions. In Progress.

--- a/configure.ac
+++ b/configure.ac
@@ -26,7 +26,7 @@ if test x"$enable_gtkmm" = xyes
 then
    PKG_CHECK_MODULES([GTKMM_3_0], [gtkmm-3.0])
    TWIIN_REQUIRES="$TWIIN_REQUIRES gtkmm-3.0"
-   TWIIN_CFLAGS="$GTKMM_3_0_CFLAGS $TWIIN_CFLAGS"
+   TWIIN_CFLAGS="$GTKMM_3_0_CFLAGS $TWIIN_CFLAGS -DENABLE_GTKMM"
    TWIIN_LIBS="$GTKMM_3_0_LIBS $TWIIN_LIBS"
 fi
 
